using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IOperatedPlayerObject
{
    void Hit();

}