using Player;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IOperatedHummerObject
{
    void Hit(PlayerHummer hummer);

}
