using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IWindAffectable
{
    void AffectWind(Wind wind);
}
